improved limits